http/wpt/mediastream/transfer-videotrackgenerator-track.html is flaky on bots https://bugs.webkit.org/show_bug.cgi?id=282602 Include a Radar link (OOPS!).

Reviewed by NOBODY (OOPS!).

The test was flaky as the following happened in case of video frame size change (or when starting to receive frames, size going from (0, 0) to non null size):
- VideoTrackGenerator sees that a frame with a new size is enqueued.
- Before enqueuing, it hops to the main thread to notify the source. The source schedules a main thread task to notify all clients, including the MediaStream player.
- When enqueued, the frame is delivered to the MediaStream player which hops to the main thread to check the Video frame size.

There could be a race in terms of size between the two code paths.
This would make MediaStreamTrack settings and video element size inconsistent.

To prevent this, we notify the MediaStreamTrack from the MediaStream player whether the size has changed.
If so, we change settings and capabilities and notify all MediaStreamTrack listeners, including the MediaStream player.

We update MediaPlayerPrivateMediaStreamAVFObjC::processNewVideoFrame and MediaPlayerPrivateMediaStreamAVFObjC::characteristicsChanged accordingly.
Covered by the test no longer being flaky on bots.

* LayoutTests/http/wpt/mediastream/transfer-videotrackgenerator-track.html:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::processNewVideoFrame):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::characteristicsChanged):
* Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.cpp:
(WebCore::MediaStreamTrackPrivate::updateSizeIfNeeded):
* Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.h:
* Source/WebCore/platform/mediastream/RealtimeMediaSourceCapabilities.h:
(WebCore::extendCapabilityRange):